@@ -1,3 +1,10 @@
+2022-08-04T08:27:01Z:
+* notice: last 14d: unq all: 7 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 520 2307 / 540 2342
+* notice: next accum: outdated-unq outdated-all / unq all: 520 2307 / 541 2342
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-21 2022-08-04]
+
 2022-08-04T01:48:31Z:
 * notice: last 14d: unq all: 7 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 520 2307 / 540 2341
